# EmailR

./: Cargo.toml  Dockerfile  README  README.md  docker-compose.yml  example.env
src/: main.rs
