[package]
name = "emailr"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = "1.2"
tokio = "1"
lettre = { version = "0.10.0-beta.2", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "r2d2", "builder"] }
serde_json = "1.0"
serde = "1.0.197"
json = "0.12.4"
envy = "0.4"
dotenvy = "0.15.7"
